<resources>
    <string name="app_name">Receitas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Receitas da Sandra</string>
    <string name="nav_header_subtitle">sandrart.penteado@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>

    <string name="menu_busca">Buscar na Internet</string>
    <string name="menu_importa">Importar/Exportar</string>
    <string name="menu_backup">Backup/Restore</string>
    <string name="menu_config">Configurar App</string>
    <string name="menu_atualiza">Atualizar App</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_compartilha">Compartilhar</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_configura">Configurações</string>
    <string name="desc_receita">Descrição da_receita</string>
    <string name="temp_receita">Tempo de preparo</string>
    <string name="minutos">Minutos</string>
    <string name="rendimento">Rendimento</string>
    <string name="porcoes">Porções</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvar">Salvar</string>
    <string name="action_button_title">Adicionar</string>
    <string name="ajuda">ajuda</string>
    <string name="title_home">title</string>
    <string name="backup">Backup</string>
    <string name="title_activity_realmx_json">RealmxJson</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Entrar</string>

    <string name="facebook_app_id">420572038995978</string>
    <string name="fb_login_protocol_scheme">fb420572038995978</string>
    <string name="title_activity_cadastro">Cadastro de novo usuário</string>
    <string name="title_activity_perfil">Perfil do usuário</string>

</resources>
