<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/inicio">

    <fragment
        android:id="@+id/inicio"
        android:name="com.acp.receitas.ui.Inicio.Inicio_Frag"
        android:label="@string/menu_inicio"
        tools:layout="@layout/frag_main_inicio" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.acp.receitas.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.acp.receitas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>