<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:id="@+id/layout_receita">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imVimg_rec"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:civ_border_color="@color/primary1"
        app:civ_border_width="2dp"
        android:contentDescription="Imagem da receita"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txVdes_rec"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@drawable/custom_edtxt"
            android:textColor="@color/primary3"
            android:hint="@string/desc_receita"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edtxt"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/temp_receita"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <TextView
                android:id="@+id/txVtem_rec"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/primary3"
                android:hint="999"
                tools:ignore="HardcodedText"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/minutos"
                android:layout_marginStart="5dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edtxt"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/rendimento"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txVren_rec"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/primary3"
                android:hint="99"
                tools:ignore="HardcodedText"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginLeft="5dp"
                android:text="@string/porcoes"
                android:layout_marginStart="5dp"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>